# fastapi-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  requirements.txt
